kubernetes/apps/guacamole/guacamole/app/guacamole-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    # External DNS Annotations
    external-dns.kubernetes.io/hostname: guacamole.techvomit.xyz
  name: guacamole
  namespace: guacamole
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: postgresql
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: guacamole
