kubernetes/apps/guacamole/guacamole/app/guacamole-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  namespace: guacamole
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: networking-authentik@kubernetescrd
spec:
  ingressClassName: ingress-traefik
  rules:
    - host: &host guacamole.techvomit.xyz
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: guacamole
                port:
                  number: 8080
            path: /
  tls:
    - hosts:
        - *host
      secretName: techvomit-xyz-production-tls
